api file defalult url removed

--- a/backend/.env.prodution
+++ b/backend/.env.prodution
@@ -5,8 +5,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=devconnect916@gmail.com
 SMTP_PASS=djmw kese aqye xsnr
-FRONTEND_URL=http://localhost:5173
 OPENAI_API_KEY=sk-ijklmnopqrstuvwxijklmnopqrstuvwxijklmnop
 SAMBANOVA_API_KEY=41fa0ced-e293-4041-b15a-d5e0845b202e
 SAMBANOVA_API_URL=https://api.sambanova.ai/v1/chat/completions
 SAMBANOVA_MODEL=Meta-Llama-3.1-8B-Instruct
+FRONTEND_URL=https://email-lead-tracker.onrender.com
